--- a/src/themes/wikimediaui/widgets.less
+++ b/src/themes/wikimediaui/widgets.less
@@ -386,7 +386,7 @@
 	}
 
 	.oo-ui-labelElement-label {
-		line-height: @line-height-widget-decoratedoption;
+		line-height: @line-height-base;
 	}
 
 	&.oo-ui-indicatorElement {
